[metadata]
name = backend.ai-common
version = attr: ai.backend.common.__version__
description = Backend.AI commons library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lablup/backend.ai-common
author = Lablup Inc.
author_email = joongi@lablup.com
license = LGPLv3
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Environment :: No Input/Output (Daemon)
    Topic :: Scientific/Engineering
    Topic :: Software Development

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
setup_requires =
    setuptools>=45.2.0
install_requires =
    pyzmq>=19.0.0
    aiohttp>=3.6.2
    aiodns>=2.0
    aioredis>=1.3.1
    aiotools>=0.9.1
    async_timeout~=3.0
    attrs>=19.3
    click>=7.0
    coloredlogs~=14.0
    etcd3~=0.8.0    # hold back for 19.09 series
    janus~=0.4.0
    msgpack~=0.6.1  # hold back for 19.09 series (aiozmq is incompatible with v1.0)
    netifaces~=0.10.0
    setproctitle~=1.1.10
    python-dateutil>=2.8
    python-json-logger
    packaging
    toml>=0.10.0
    trafaret~=1.2   # hold back for 19.09 series
    typing-extensions==3.7.4

[options.packages.find]
where = src
include = ai.backend.common

[options.package_data]
ai.backend.common = py.typed

[options.extras_require]
build =
    setuptools>=45.2.0
    wheel>=0.33.4
    twine>=1.13.0
    towncrier>=19.2.0
test =
    pytest~=5.4.1
    pytest-cov>=2.7.0
    pytest-asyncio>=0.11.0
    pytest-mock>=1.10.4
    asynctest>=0.13.0
    codecov>=2.0.15
    aioresponses>=0.6.3
lint =
    flake8>=3.8.1
typecheck =
    mypy>=0.770
dev =
    # pytest-sugar>=0.9.2
monitor =
    datadog>=0.16.0
    raven>=6.1

[bdist_wheel]
universal = false

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E128,E129,E722,E731,E221,E241,E401,W504,N801,N802
max-line-length = 125
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,docs,alembic,*.pyi

[tool:pytest]
testpaths = tests
markers =
    integration: Test cases that spawn Dockerized kernel sessions

[mypy]
ignore_missing_imports = true
mypy_path = ./stubs
