[metadata]
name = backend.ai-common
version = attr: ai.backend.common.__version__
description = Backend.AI commons library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lablup/backend.ai-common
author = Lablup Inc.
author_email = joongi@lablup.com
license = LGPLv3
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Environment :: No Input/Output (Daemon)
    Topic :: Scientific/Engineering
    Topic :: Software Development

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.8
setup_requires =
    setuptools>=46.1.0
install_requires =
    pyzmq~=19.0.1
    aiohttp>=3.7.0
    aiodns>=2.0
    aioredis>=1.3.1
    aiotools>=1.0.0
    async_timeout~=3.0
    attrs>=19.3
    click>=7.1
    coloredlogs~=14.0
    etcd3~=0.12.0
    janus~=0.6.0
    msgpack~=1.0.0
    netifaces~=0.10.9
    setproctitle~=1.1.10
    psutil~=5.7
    python-dateutil>=2.8
    python-json-logger
    packaging
    tblib~=1.7
    toml>=0.10.1
    trafaret~=2.1
    yarl~=1.6

[options.packages.find]
where = src
include =
    ai.backend.common
    ai.backend.common.plugin

[options.package_data]
ai.backend.common = py.typed
ai.backend.common.plugin = py.typed

[options.extras_require]
build =
    setuptools>=46.1.0
    wheel>=0.35.1
    twine>=3.1.1
    towncrier>=19.2.0
test =
    pytest~=6.1.1
    pytest-asyncio>=0.14.0
    pytest-cov>=2.7.0
    pytest-mock>=3.1.0
    asynctest>=0.13.0; python_version<"3.8"
    codecov~=2.1
    aioresponses>=0.7.0
lint =
    flake8>=3.8.1
typecheck =
    mypy>=0.790
dev =
monitor =
    backend.ai-monitor-sentry>=0.2.1
    backend.ai-monitor-datadog>=0.2.1

[bdist_wheel]
universal = false

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E128,E129,E722,E731,E221,E241,E401,W504,N801,N802
max-line-length = 125
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,docs,alembic,*.pyi

[tool:pytest]
testpaths = tests
markers =
    integration: Test cases that spawn Dockerized kernel sessions

[mypy]
ignore_missing_imports = true
mypy_path = ./stubs
namespace_packages = true
